Fixed image align

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+* {
+  background-color: #C6E2FF;
+}
 h1 {
   font-family: Verdana, sans-serif;
   color: #576D94;
@@ -16,6 +19,7 @@ img {
   border-style: solid;
   border-width: 4px;
   border-radius: 5px;
-  margin: auto;
-  text-align: center;
+}
+div {
+ margin: auto; 
 }
